--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@docusaurus/core": "2.4.0",
     "@docusaurus/preset-classic": "2.4.0",
     "@mdx-js/react": "^1.6.22",
+    "@types/plotly.js": "^2.12.18",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
@@ -26,6 +27,8 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.4.0",
     "@tsconfig/docusaurus": "^1.0.7",
+    "plotly.js": "^2.20.0",
+    "react-plotly.js": "^2.6.0",
     "typescript": "^4.9.5"
   },
   "browserslist": {
